--- a/_config.yml
+++ b/_config.yml
@@ -9,8 +9,7 @@ last_name: Patel
 contact_note:
 description: # the ">" symbol means to ignore newlines until "footer_text:"
 #A simple, whitespace theme for academics. Based on [*folio](https://github.com/bogoli/-folio) design.
-footer_text: > # the footer text (you can use markdown here)
-  &copy; {{ site.time | date: "%Y" }} Hrishikesh Patel. All rights reserved.
+footer_text: 
 keywords: # add your own keywords or leave empty
 lang: en # the language of your site (for example: en, fr, cn, ru, etc.)
 icon: ⚛️ # the emoji used as the favicon (alternatively, provide image name in /assets/img/)
