--- a/_config.yml
+++ b/_config.yml
@@ -129,9 +129,10 @@ disqus_shortname: al-folio # put your disqus shortname
 # If you have blog posts published on medium.com or other external sources,
 # you can display them in your blog by adding a link to the RSS feed.
 external_sources:
-  - name: epfl.ch
+  - name: A Swiss Dream
     rss_url: https://www.epfl.ch/education/international/en/a-swiss-dream/
-#  - name: Google Blog
+#  - name: A Swiss Dream
+#    rss_url: https://www.epfl.ch/education/international/en/a-swiss-dream/
 #    posts:
 #      - url: https://blog.google/technology/ai/google-gemini-update-flash-ai-assistant-io-2024/
 #        published_date: 2024-05-14
